fix(header): fixed header on mobile to dynamically adjust in size

--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -75,8 +75,8 @@
   }
 
   .tabs {
-    align-items: center;
     display: flex;
+    align-items: center;
     justify-self: flex-start;
     list-style: none;
     margin: 0 0 0 120px;
@@ -88,7 +88,7 @@
 
     @media (max-width: 900px) {
       background: var(--color-fill-app);
-      height: var(--nav-height);
+      flex-flow: row wrap;
       justify-content: center;
       order: 3;
       padding: 0;
